[tool.poetry]
name = "aiogram3-learning"
version = "0.1.0"
description = ""
authors = ["Timur <supteem@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
pydantic-settings = "^2.0.3"
redis = "^5.0.1"
pipenv = "^2023.10.24"
sqlalchemy = "^2.0.23"
psycopg = "^3.1.13"
asyncpg = "^0.29.0"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
